Added admin endpoint /admin/drop_contest
Minor changes in the db and in /admin/{extract,start}
